--- a/ЛР10.md
+++ b/ЛР10.md
@@ -27,3 +27,108 @@
 | 14 | **Execute (x)**                | Право виконання (файлу або доступу до каталогу).                   |
 | 15 | **Setuid / Setgid**            | Спецдозволи: виконання з правами власника або групи.               |
 | 16 | **Sticky bit**                 | Забороняє видалення файлів у каталозі іншим користувачам.          |
+
+## Відповіді на питання
+1. Яке призначення команди id?
+Команда id виводить інформацію про поточного користувача, зокрема його UID (унікальний ідентифікатор користувача), основну групу (GID), а також усі групи, до яких цей користувач належить. Це зручно для перевірки прав доступу та членства в групах, особливо перед зміною власності файлів або виконанням команд, що потребують певних групових дозволів.
+
+2. Як переглянути які права доступу має власник файлу?
+Щоб переглянути права доступу до файлу, використовується команда ls -l, яка виводить список файлів із правами доступу. Перші 10 символів у виведенні вказують тип файлу і права доступу. Наприклад, рядок -rwxr-xr-- означає, що власник має права читання (r), запису (w) і виконання (x); група — читання і виконання; інші користувачі — лише читання. Власник файлу зазначений після розміру виведеного файлу.
+
+3. Як змінити власника групи?
+Щоб змінити групу-власника файлу, використовується команда chgrp. Синтаксис такий: chgrp group_name filename, де group_name — нова група, а filename — назва файлу або каталогу. Змінювати групу можна лише на ту, до якої входить користувач. Наприклад: chgrp staff report.txt змінить групу файлу report.txt на staff.
+
+4. Як можна переглянути у терміналі, який тип поточного файлу? Наведіть приклади для різних типів файлів.
+Для визначення типу файлу в терміналі використовується команда file, яка аналізує вміст файлу, а не лише розширення. Наприклад:
+
+    file image.png може повернути: image.png: PNG image data
+
+    file script.sh поверне: script.sh: Bourne-Again shell script
+
+    file somebinary може повернути: somebinary: ELF 64-bit LSB executable
+
+    file document.txt поверне: document.txt: ASCII text
+
+Ця команда є більш точною, ніж просто перегляд розширень або атрибутів у ls.
+
+5. Для чого використовуються дозволи Setuid та Setgid?
+Дозволи Setuid і Setgid використовуються для тимчасового підвищення прав користувача під час виконання програм.
+
+    Setuid дозволяє програмі запускатися з правами власника файлу, зазвичай root. Наприклад, команда passwd дозволяє змінити пароль, хоча файл /etc/shadow, де зберігаються хеші паролів, доступний лише root.
+
+    Setgid працює подібно, але застосовується до груп. Коли файл з дозволом setgid виконується, він працює з правами групи-власника файлу. У випадку директорій, setgid забезпечує, що всі нові файли в каталозі автоматично належатимуть групі-власнику каталогу.
+
+6. Для чого в системі потрібен так званий “липкий біт” (Sticky Bit)? Наведіть приклади коли цей дозвіл доцільно використовувати.
+Sticky Bit використовується для захисту файлів у загальнодоступних каталогах, щоб лише власник файлу або root міг його видалити або перейменувати, навіть якщо інші користувачі мають права запису в каталог.
+Типовий приклад — каталог /tmp, де різні користувачі можуть створювати тимчасові файли. Без Sticky Bit інші користувачі могли б видаляти чужі файли. За допомогою Sticky Bit (chmod +t /tmp) це обмеження встановлюється, і безпека підвищується.
+У виведенні ls -l Sticky Bit позначається літерою t в останньому символі прав доступу до каталогу, наприклад: drwxrwxrwt.
+
+
+# Хід роботи:
+
+## Таблиця по лабораторних роботах курсу NDG Linux Essentials: Lab 17: Ownership and Permissions та Lab 18: Special Directories and Files.
+
+| **Команда**         | **Призначення**                                    | 
+| ------------------- | -------------------------------------------------- | 
+| `id`                | Показує UID, GID, ім’я користувача та групи        | 
+| `groups`            | Показує групи, до яких належить користувач         | 
+| `newgrp`            | Змінює поточну первинну групу                      | 
+| `exit`              | Вихід із оболонки, запущеної `newgrp`              | 
+| `chgrp`             | Зміна групи-власника файлу                         | 
+| `ls -l`             | Показує тип файлу, права доступу та власника       | 
+| `touch`             | Створення порожнього файлу                         | 
+| `chmod`             | Зміна прав доступу                                 |
+| `chmod` (з цифрами) | Зміна прав доступу (числовий метод)                | 
+| `umask`             | Встановлення/перевірка маски прав за замовчуванням | 
+| `ln`                | Створення жорсткого або символічного посилання     | 
+| `ls -i`             | Показує номер inode файлу                          | 
+| `ls -li`            | Показує inode і кількість посилань                 | 
+| `chmod u+s`         | Додає setuid до файлу                              | 
+| `chmod 4775 file`   | Додає setuid числовим методом                      |
+| `chmod g+s`         | Додає setgid до файлу/каталогу                     | 
+| `chmod 2775 dir`    | Додає setgid числовим методом                      | 
+| `chmod o+t`         | Додає sticky bit до каталогу                       | 
+| `chmod 1775 dir`    | Додає sticky bit числовим методом                  | 
+
+## Практична частина 
+
+1-2. ![Image](https://github.com/user-attachments/assets/3608900e-94d4-49da-98f8-1236670ed3f5)
+
+![Image](https://github.com/user-attachments/assets/54a0526c-3c2d-43a6-a8dd-15a93d02c9e5)
+
+![Image](https://github.com/user-attachments/assets/cc513c89-61f7-465e-a34f-92368c422246)
+
+![Image](https://github.com/user-attachments/assets/bc687682-133b-46d0-bf0b-a18b9ef3ebaa)
+
+![Image](https://github.com/user-attachments/assets/adb49943-8525-4948-b4f4-d9b802fb20c2)
+
+![Image](https://github.com/user-attachments/assets/7e25d75c-a1eb-4015-9cc7-7921c95c3ec0)
+
+![Image](https://github.com/user-attachments/assets/01406666-6ab2-4fb5-b7d6-3e79f497565e)
+Висновок: Навіть якщо файл належить іншому користувачу, інший користувач може видалити його, якщо має права на запис у батьківську директорію. Захист на рівні файла (-w-) впливає на зміну його вмісту, але не забороняє його видалення.
+
+# Відповіді на контрольні запитання:
+
+1. **Приклади зміни прав доступу символічним методом:** Для зміни прав доступу символічним методом використовують команду `chmod`, наприклад, `chmod u+x файл` додає право на виконання для власника, `chmod g-w файл` забирає право на запис для групи, `chmod o=r файл` встановлює тільки право читання для інших.
+
+2. **Приклади зміни прав доступу числовим методом:** Числовий метод задає права у вигляді трицифрового числа, де кожна цифра відповідає користувачу, групі й іншим, наприклад, `chmod 755 файл` встановлює rwx для власника, rx для групи та інших, `chmod 644 файл` – rw для власника і r для інших.
+
+3. **Призначення команди umask:** Команда `umask` визначає початкові права доступу для новостворених файлів і директорій, шляхом віднімання її значення від максимальних дозволів, наприклад, при `umask 022` нові файли отримують права 644, а директорії — 755.
+
+4. **Порівняння жорстких і символічних посилань:** Жорстке посилання вказує безпосередньо на inode файлу і не залежить від імені, видалення оригінального файлу не впливає на доступ до вмісту через жорстке посилання, тоді як символічне посилання вказує на ім’я файлу, і якщо оригінал видалити – воно стане “битим”.
+
+5. **Чи можна виконати файл з правами виконання, але без читання (--x)?** Так, файл можна виконати, якщо в нього є право на виконання, навіть без права читання, але процес не зможе переглянути його вміст, лише виконати як програму.
+
+6. **Чи зберігаються зміни прав у наступній сесії?** Так, зміни прав доступу зберігаються на файловій системі і діють постійно, незалежно від сесії чи перезавантаження системи.
+
+7. **Чи існує шаблон прав при створенні нових файлів і як його змінити?** Так, за замовчуванням використовується маска `umask`, яка задає шаблон дозволів, і її можна змінити за допомогою команди `umask`, наприклад, `umask 027` забезпечить більш обмежені права для групи та інших.
+
+8. **Як створити жорстке посилання і коли його використовувати?** Жорстке посилання створюється командою `ln оригінал посилання`, доцільно використовувати для резервного доступу до важливого файлу або уникнення втрати даних при перейменуванні чи видаленні оригіналу.
+
+9. **Як створити символічне посилання і коли його використовувати?** Символічне посилання створюється командою `ln -s ціль посилання`, його зручно використовувати для доступу до файлів з довгим шляхом, для створення ярликів або при необхідності посилатися на файл у іншій файловій системі.
+
+10. **Де створювати тимчасовий одноразовий файл?** Тимчасові одноразові файли слід створювати в каталозі `/tmp`, який призначений для короткочасного зберігання файлів усіма користувачами.
+
+11. **Що буде при видаленні оригіналу, символічного і жорсткого посилань?** Якщо видалити файл оригінал, символічне посилання стане “битим” і не працюватиме, але жорстке посилання продовжить працювати з вмістом; якщо видалити символічне посилання — нічого не станеться з іншими файлами; якщо видалити жорстке посилання — інші жорсткі посилання залишаться працездатними, якщо хоча б одне з них існує, вміст зберігається.
+
+
