--- a/ЛР9.md
+++ b/ЛР9.md
@@ -4,7 +4,7 @@
 
 ## Мета: Отримання практичних навиків роботи з командною оболонкою Bash. Знайомство з базовими діями при створенні нових користувачів та нових груп користувачів.
 
-### Словник базових термінів:
+### Словник базових термінів:(Видиборець Назар)
 - command – команда; інструкція, яку користувач вводить у терміналі для виконання дії.
 - option – параметр; додається до команди для зміни її поведінки (наприклад, -l, --help).
 - sudo – виконує команду від імені адміністратора (superuser).
@@ -102,13 +102,23 @@ UPG (User Private Group) — це приватна група, яка автом
 
 
 
-# Відповіді на контрольні запитання
-1. Паролі не зберігаються в конфігураційних файлах у відкритому вигляді для забезпечення безпеки — замість цього використовується хешування, щоб навіть у разі доступу до файлів зловмисник не міг дізнатись справжній пароль.
-2. Не рекомендується працювати під обліковим записом root у повсякденній роботі, оскільки це збільшує ризик випадкових або шкідливих дій, які можуть зашкодити системі.
-3. Команда `su` перемикає користувача на інший обліковий запис (зазвичай root) і вимагає пароль цього облікового запису, тоді як `sudo` дозволяє виконати одну команду з правами адміністратора, використовуючи пароль поточного користувача з відповідними правами.
-4. Домашній каталог root не розміщено в /home для зменшення ризику пошкодження або випадкового доступу до критичних файлів root-користувача, а також для ізоляції від звичайних користувачів.
-5. Команда `getent` використовується для отримання записів із різних баз даних системи, таких як користувачі, групи, хости, особливо у випадках використання мережевої автентифікації.
-6. Пароль користувача можна змінити за допомогою команди `passwd`, яку потрібно виконати від імені root або самого користувача.
-7. Існуючу групу можна видалити командою `groupdel groupname`; після видалення записи в /etc/group зникають, але файли, яким належала ця група, залишаються з числовим GID.
-8. Команда `chage` використовується для керування політикою терміну дії пароля, наприклад, встановлення дати завершення дії пароля або примусового оновлення.
-9. Найбільш використовуваними параметрами команди `usermod` є `-aG` (додавання до групи), `-l` (зміна імені користувача), `-d` (зміна домашнього каталогу) та `-s` (зміна оболонки входу).
+# Відповіді на контрольні запитання (Рубель Станіслав)
+
+1. Паролі не зберігаються у відкритому вигляді в конфігураційних файлах задля безпеки. Замість цього застосовується хешування, щоб у разі доступу до файлів не було можливості дізнатись справжній пароль.
+
+2. Не рекомендується працювати під обліковим записом root постійно, оскільки це підвищує ризик випадкових або шкідливих дій, які можуть нашкодити системі.
+
+3. Команда `su` переключає на інший користувацький акаунт (часто root) і запитує пароль цього акаунта, тоді як `sudo` дозволяє виконати конкретну команду з правами адміністратора, використовуючи пароль поточного користувача з відповідними правами.
+
+4. Домашній каталог root не розміщується в `/home`, щоб знизити ризик випадкового або небажаного доступу до критичних файлів і забезпечити ізоляцію root від звичайних користувачів.
+
+5. Команда `getent` використовується для отримання інформації з різних системних баз даних, таких як списки користувачів, груп чи хостів, що особливо корисно при мережевій автентифікації.
+
+6. Змінити пароль користувача можна за допомогою команди `passwd`, яку виконують або сам користувач, або root.
+
+7. Існуючу групу видаляють командою `groupdel groupname`; записи у файлі `/etc/group` зникають, але файли, які належали цій групі, залишаються з числовим GID.
+
+8. Команда `chage` дозволяє керувати політикою терміну дії пароля — наприклад, встановлювати дату закінчення дії пароля або примусову зміну.
+
+9. Найпоширеніші параметри команди `usermod` — це `-aG` (додавання користувача до групи), `-l` (зміна імені користувача), `-d` (зміна домашнього каталогу) та `-s` (зміна оболонки входу).
+
