--- a/ЛР8.md
+++ b/ЛР8.md
@@ -17,7 +17,7 @@
 4. Знайомство з діями при налаштуванні мережі.
    
 
-## Словник термінів Linux
+## Словник термінів Linux (Видиборець Назар)
 
 ### Файлові системи та процеси
 
@@ -85,37 +85,36 @@
 
 
 
+# Відповіді на питання (Рубель Станіслав)
 
+## 1. Що таке "псевдо файлова система" і для чого вона потрібна
 
+**Псевдо файлова система** — це віртуальна файлова система, яка:
 
+- Не розміщується на фізичному носії (жорсткому диску чи SSD)
+- Існує тільки в оперативній пам’яті під час роботи ОС
+- Має структуру, схожу на звичайну файлову систему (папки, файли)
+- Генерує свій вміст динамічно під час звернення до неї
 
+**Її призначення:**
 
-# Відповіді на питання 
+- Забезпечує доступ до даних про ядро ОС та апаратне забезпечення
+- Дозволяє змінювати системні налаштування на ходу без перезавантаження
+- Стандартизує спосіб отримання системної інформації через файловий інтерфейс
 
-## 1. Поняття "псевдо файлової системи" та її призначення
+Приклади таких систем: `/proc`, `/sys`, `/dev`
 
-**Псевдо файлова система** - це віртуальна файлова система, яка:
-- Не зберігається на фізичному носії (диску)
-- Існує виключно в оперативній пам'яті під час роботи системи
-- Має структуру, подібну до звичайної файлової системи (директорії, файли)
-- Динамічно генерує вміст "на льоту" при зверненні
+## 2. Особливості роботи з каталогом /proc
 
-**Призначення:**
-- Надання доступу до інформації про ядро та апаратне забезпечення
-- Динамічне керування параметрами системи без необхідності перезавантаження
-- Уніфікація доступу до системної інформації через стандартний файловий інтерфейс
+**Чому користувачі рідко працюють безпосередньо з /proc?**
 
-Приклади: `/proc`, `/sys`, `/dev`
+- Інформація у файлах представлена у вигляді сирих даних, які складно інтерпретувати
+- Вміст файлів у каталозі змінюється в реальному часі
+- Для зручності використовують спеціальні утиліти (`top`, `free`, `ps`), які:
+  - Збирають і обробляють дані з /proc
+  - Відображають інформацію у більш зрозумілому вигляді
+  - Можуть фільтрувати і сортувати результати для зручності
 
-## 2. Робота з каталогом /proc
-
-**Чому користувачі рідко звертаються напряму до /proc?**
-- Інформація представлена у незручному для людини форматі (сирі дані)
-- Вміст файлів динамічно змінюється
-- Існують спеціалізовані утиліти (`top`, `free`, `ps`), які:
-  - Агрегують дані з /proc
-  - Надають зручне відображення
-  - Мають фільтрацію та сортування
 
 
 ## 3. Призначення файлів у /proc
@@ -269,68 +268,65 @@
 ![Image](https://github.com/user-attachments/assets/e8ac86c4-cfdb-4fd0-a46c-cef70710d847)
 ![Image](https://github.com/user-attachments/assets/79623b5c-fcee-471f-a232-ba05c8da5548)
 
-# Відповіді на контрольні запитання
-1. Зв'язок між cat та tac
+# Відповіді на контрольні запитання (Рубель Станіслав)
 
-- cat (concatenate): виводить вміст файлу від початку до кінця
+1. Взаємозв’язок між командами `cat` та `tac`
 
-- tac (cat навпаки): виводить вміст файлу від кінця до початку (рядки у зворотному порядку)
+- `cat` (concatenate) виводить вміст файлу послідовно, з початку до кінця.
+- `tac` — це «cat» у зворотному напрямку: виводить рядки файлу з кінця до початку.
 
-2. Призначення ss
+2. Для чого використовується команда `ss`
 
-    ss (Socket Statistics): показує статистику мережевих з'єднань:
+Команда `ss` (Socket Statistics) демонструє статистику мережевих підключень, зокрема:
+- відкриті порти,
+- активні з’єднання,
+- стан сокетів.
+Ця команда є сучасним замінником застарілого `netstat`.
 
-- Відкриті порти
+3. Чим відрізняються `ps --forest` та `pstree`
 
-- Активні підключення
+| Команда       | Відмінність                                           |
+|---------------|------------------------------------------------------|
+| `ps --forest` | Відображає дерево процесів тільки для поточної сесії |
+| `pstree`      | Показує повне дерево процесів усієї системи у вигляді ASCII-графіки |
 
-- Стан сокетів
+4. Де зберігаються налаштування системи
 
-- Замінник застарілої команди netstat
+- Основний каталог: `/etc/`
+- Додаткові каталоги:
+  - `/etc/default/` — конфігурації служб
+  - `/etc/sysconfig/` — системні налаштування (характерно для RHEL/CentOS)
+  - `/etc/systemd/` — конфігурації systemd
 
-3. Відмінність ps --forest vs pstree
-Команда	Відмінності
-ps --forest	Показує дерево процесів тільки для поточної сесії
-pstree	Показує повне дерево всіх процесів у системі з ASCII-графікою
-4. Каталоги налаштувань системи
+5. Каталоги з програмами для користувачів
 
-    Основні: /etc/
-
-    Додаткові:
-- /etc/default/ - налаштування служб
-- /etc/sysconfig/ - конфігурація системи (RHEL/CentOS)
-- /etc/systemd/ - конфігурація systemd
-
-5. Каталоги програм для користувачів
-
-- /usr/bin/ - основні програми
-
-- /usr/local/bin/ - локально встановлені програми
-
--  /opt/ - програми сторонніх розробників
+- `/usr/bin/` — стандартні програми
+- `/usr/local/bin/` — локально встановлені утиліти
+- `/opt/` — сторонні додатки
 
 6. Каталоги системних програм
 
-- Для всіх користувачів: /usr/sbin/
-
-- Тільки для root: /sbin/
-
-- Системні утиліти: /usr/local/sbin/
+- `/usr/sbin/` — для всіх користувачів
+- `/sbin/` — програми, доступні лише root
+- `/usr/local/sbin/` — локальні системні утиліти
 
 7. Призначення мережевих команд
-Команда	Призначення
-- ping	Перевірка доступності хоста (ICMP-запити)
-- ifconfig	Налаштування мережевих інтерфейсів (застаріла, використовуйте ip)
-- traceroute	Визначення шляху пакетів до цільового хоста
 
-9. Назви мережевих інтерфейсів
-    Традиційні: eth0, eth1 (Ethernet), wlan0 (Wi-Fi)
-    Сучасні: enp0s3, ens33 (Predictable Network Interface Names)
+| Команда     | Призначення                                  |
+|-------------|---------------------------------------------|
+| `ping`      | Перевірка доступності хоста за допомогою ICMP-запитів |
+| `ifconfig`  | Налаштування мережевих інтерфейсів (застаріла, замінюється `ip`) |
+| `traceroute`| Визначає маршрут пакетів до цільового вузла  |
 
-10. Вивід параметрів одного інтерфейсу через ifconfig
-- ifconfig eth1
-або для сучасних систем з ip:
-- ip addr show dev eth1
+8. Назви мережевих інтерфейсів
+
+- Класичні імена: `eth0`, `eth1` (Ethernet), `wlan0` (Wi-Fi)
+- Новіші стандарти: `enp0s3`, `ens33` (Predictable Network Interface Names)
+
+9. Як подивитись параметри конкретного інтерфейсу
+
+- Використання `ifconfig` (для застарілих систем):
+
 
 
 
