--- a/ЛР10.md
+++ b/ЛР10.md
@@ -7,7 +7,7 @@
 Знайомство з спеціальними каталогами та файлами в Linux.
 
 
-## Словник базових англійських термінів
+## Словник базових англійських термінів (Видиборець Назар)
 
 | №  | **Англійське слово / команда** | **Українське пояснення**                                           |
 | -- | ------------------------------ | ------------------------------------------------------------------ |
